--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,49 @@
+@font-face {
+   font-family: "iranSans-extraBold";
+   src: url(../public/font/IRANSansXV.ttf);
+   font-weight: 800;
+}
+@font-face {
+   font-family: "iranSans-bold";
+   src: url(../public/font/IRANSansXV.ttf);
+   font-weight: 700;
+}
+@font-face {
+   font-family: "iranSans-medium";
+   src: url(../public/font/IRANSansXV.ttf);
+   font-weight: 500;
+}
+@font-face {
+   font-family: "iranSans-normal";
+   src: url(../public/font/IRANSansXV.ttf);
+   font-weight: 400;
+}
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+   padding: 0;
+   margin: 0;
+   direction: rtl;
+}
+
+ul,
+li {
+   list-style: none;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+   color: inherit;
+   text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+   box-sizing: border-box;
+   padding: 0;
+   margin: 0;
+}
+
+:root {
+   --black: #000;
+   --orange: #fa6256;
+   --white: #fff;
 }
