--- a/components/Home/Header/Header.module.scss
+++ b/components/Home/Header/Header.module.scss
@@ -1,3 +1,120 @@
 .header {
    background-color: var(--black);
+   padding-top: 45px;
+   padding-bottom: 65px;
+
+   @media screen and (max-width: 850px) {
+      padding-top: 55px;
+   }
+
+   @media screen and (max-width: 425px) {
+      padding-top: 32px;
+   }
+
+   &_box {
+      display: flex;
+
+      @media screen and (max-width: 850px) {
+         flex-flow: column;
+      }
+
+      &__image {
+         width: 45%;
+
+         img {
+            width: 100%;
+         }
+
+         @media screen and (max-width: 1024px) {
+            width: 40%;
+            padding-top: 50px;
+         }
+
+         @media screen and (max-width: 850px) {
+            width: 100%;
+            padding-top: 0px;
+         }
+      }
+
+      &__dec {
+         width: 55%;
+         padding-top: 70px;
+
+         @media screen and (max-width: 1024px) {
+            width: 60%;
+         }
+
+         @media screen and (max-width: 850px) {
+            width: 100%;
+            margin-bottom: 50px;
+            padding-top: 0;
+         }
+
+         &___box {
+            max-width: 500px;
+
+            @media screen and (max-width: 850px) {
+               max-width: 100%;
+            }
+
+            h1 {
+               margin-bottom: 28px;
+               position: relative;
+               z-index: 10;
+
+               @media screen and (max-width: 425px) {
+                  font-size: 30px !important;
+                  line-height: 45px !important;
+                  margin-bottom: 8px;
+               }
+
+               svg {
+                  position: absolute;
+                  right: 0;
+                  top: 45px;
+                  z-index: -1;
+
+                  @media screen and (max-width: 425px) {
+                     top: 25px;
+                     width: 100px;
+                  }
+               }
+            }
+
+            p {
+               margin-bottom: 100px;
+
+               @media screen and (max-width: 1024px) {
+                  margin-bottom: 70px;
+               }
+
+               @media screen and (max-width: 850px) {
+                  margin-bottom: 50px;
+               }
+
+               @media screen and (max-width: 425px) {
+                  font-size: 14px !important;
+                  line-height: 21px !important;
+                  margin-bottom: 32px;
+               }
+            }
+
+            &____emoji {
+               display: flex;
+
+               svg {
+                  margin-left: 30px;
+
+                  @media screen and (max-width: 425px) {
+                     margin-left: 20px;
+                  }
+               }
+
+               svg:last-child {
+                  margin-left: 0;
+               }
+            }
+         }
+      }
+   }
 }
