--- a/components/statics/Container/Container.module.scss
+++ b/components/statics/Container/Container.module.scss
@@ -2,4 +2,25 @@
    width: 100%;
    max-width: 1096px;
    margin: 0 auto;
+
+   @media screen and (max-width: 1200px) {
+      max-width: 900px;
+   }
+
+   @media screen and (max-width: 1024px) {
+      max-width: 800px;
+   }
+
+   @media screen and (max-width: 850px) {
+      max-width: 700px;
+   }
+
+   @media screen and (max-width: 768px) {
+      max-width: 100%;
+      padding: 0 34px;
+   }
+
+   @media screen and (max-width: 425px) {
+      padding: 0 24px;
+   }
 }
