--- a/components/statics/Navbars/Dropdown.module.scss
+++ b/components/statics/Navbars/Dropdown.module.scss
@@ -74,6 +74,7 @@
       opacity: 0;
       transition: 0.3s all;
       transition-delay: 0.1s;
+      z-index: 1000;
 
       @media screen and (max-width: 500px) {
          width: calc(100% - 48px);
