--- a/components/statics/Navbars/Hamburger.module.scss
+++ b/components/statics/Navbars/Hamburger.module.scss
@@ -63,6 +63,7 @@
       transition: 0.3s all;
       opacity: 0;
       pointer-events: none;
+      z-index: 100;
 
       &__item {
          padding: 15px 60px;
