--- a/components/statics/Container/Container.module.scss
+++ b/components/statics/Container/Container.module.scss
@@ -2,6 +2,7 @@
    width: 100%;
    max-width: 1096px;
    margin: 0 auto;
+   overflow: hidden;
 
    @media screen and (max-width: 1200px) {
       max-width: 900px;
