--- a/components/Home/Properties/Properties.module.scss
+++ b/components/Home/Properties/Properties.module.scss
@@ -40,6 +40,7 @@
          display: flex;
          margin-bottom: 60px;
          justify-content: space-between;
+         height: fit-content;
 
          @media screen and (max-width: 768px) {
             flex-flow: column;
@@ -47,6 +48,7 @@
 
          &___image {
             width: 55%;
+            height: 470px;
 
             @media screen and (max-width: 1200px) {
                width: 50%;
@@ -57,8 +59,13 @@
                margin-bottom: 20px;
             }
 
+            @media screen and (max-width: 600px) {
+               height: 330px;
+            }
+
             @media screen and (max-width: 425px) {
                margin-bottom: 16px;
+               height: 235px;
             }
 
             img {
