--- a/components/Home/Accordion/Accordion.module.scss
+++ b/components/Home/Accordion/Accordion.module.scss
@@ -108,7 +108,7 @@
             }
 
             p {
-               max-height: 500px;
+               max-height: 100%;
                opacity: 1;
                pointer-events: visible;
             }
