--- a/components/Home/NewsLetters/NewsLetters.module.scss
+++ b/components/Home/NewsLetters/NewsLetters.module.scss
@@ -28,6 +28,7 @@
                display: flex;
                align-items: center;
                margin-left: 40px;
+               cursor: pointer;
 
                @media screen and (max-width: 1024px) {
                   margin-left: 30px;
@@ -62,15 +63,18 @@
 
          button {
             position: absolute;
-            top: 50%;
+            top: 1px;
             left: 1px;
             padding: 12px 15px;
             background-color: #09090a;
-            transform: translateY(-50%);
             border: none;
             outline: none;
             z-index: 10;
             cursor: pointer;
+
+            h6 {
+               pointer-events: none;
+            }
          }
       }
    }
