--- a/components/styles/Input/Input.module.scss
+++ b/components/styles/Input/Input.module.scss
@@ -27,4 +27,16 @@
       margin-right: 16px;
       display: none;
    }
+
+   input:invalid[focused="true"] {
+      border: 1px solid #ff7676;
+   }
+
+   input:invalid[value=""] {
+      border: 1px solid #6d6d75;
+   }
+
+   input:invalid[focused="true"] ~ span {
+      display: block;
+   }
 }
