--- a/components/Home/Accordion/Accordion.module.scss
+++ b/components/Home/Accordion/Accordion.module.scss
@@ -1,8 +1,8 @@
 .accordion {
-   padding-bottom: 120px;
+   // padding-bottom: 120px;
 
    @media screen and (max-width: 425px) {
-      padding-bottom: 80px;
+      // padding-bottom: 80px;
    }
 
    &_box {
