--- a/components/Home/Questions/Questions.module.scss
+++ b/components/Home/Questions/Questions.module.scss
@@ -1,8 +1,8 @@
 .questions {
-   padding-bottom: 120px;
+   padding-top: 120px;
 
    @media screen and (max-width: 425px) {
-      padding-bottom: 80px;
+      padding-top: 90px;
    }
 
    &_box {
