--- a/components/styles/Input/Input.module.scss
+++ b/components/styles/Input/Input.module.scss
@@ -1,11 +1,13 @@
 .input {
    display: flex;
    flex-flow: column;
+   margin-bottom: 14px;
+   position: relative;
 
    input {
       padding: 14px 16px;
       background: #09090a;
-      border: 1px solid #6d6d75;
+      border: 1px solid #333336;
       outline: none;
       font-family: "iranSans-medium", -apple-system, BlinkMacSystemFont,
          "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
@@ -13,6 +15,11 @@
       color: var(--white);
       font-size: 14px;
       line-height: 21px;
+      transition: 0.2s all;
+
+      &:focus {
+         border: 1px solid #6d6d75;
+      }
 
       &::placeholder {
          color: #6c6c6c;
@@ -21,11 +28,32 @@
       }
    }
 
+   svg {
+      position: absolute;
+      left: 12px;
+      top: 14px;
+      cursor: pointer;
+      opacity: 0.5;
+      transition: 0.1s all;
+
+      path {
+         pointer-events: none;
+      }
+   }
+
    span {
       color: #ff7676;
       margin-top: 5px;
       margin-right: 16px;
       display: none;
+      font-size: 13px;
+      font-family: "iranSans-medium";
+      line-height: 20px;
+
+      @media screen and (max-width: 425px) {
+         font-size: 12px !important;
+         line-height: 18px !important;
+      }
    }
 
    input:invalid[focused="true"] {
@@ -38,5 +66,11 @@
 
    input:invalid[focused="true"] ~ span {
       display: block;
+   }
+   input:invalid[focused="true"]:required ~ span {
+      display: block !important;
+   }
+   input:required ~ span {
+      display: none;
    }
 }
